--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pesapaljs",
+  "name": "ch-pesapaljs",
   "version": "1.0.0",
   "description": "Integrate PesaPal into your Node application",
-  "homepage": "https://github.com/aksalj/pesapaljs",
+  "homepage": "https://github.com/CollinsMunene/ch-pesapaljs",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aksalj/pesapaljs.git"
+    "url": "git+https://github.com/CollinsMunene/ch-pesapaljs.git"
   },
   "bugs": {
-    "url": "https://github.com/aksalj/pesapaljs/issues"
+    "url": "https://github.com/CollinsMunene/ch-pesapaljs/issues"
   },
   "keywords": [
     "pesapal",
@@ -26,7 +26,7 @@
     "equity",
     "coop"
   ],
-  "author": "Salama AB <aksalj@aksalj.com>",
+  "author": "Collins Munene <collinshillary1@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.1.1",
